test/neg/neg-serial1.errc
All rpc arguments must be Serializable
